add domain link

--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sherine Foo Portfolio</title>
   <script src="js/main.js"></script>
+  <link rel="stylesheet" href="stylesheets/style.css">
+
 </head>
 <body>
     <header>
-      <div>
         <nav>
-          <a href="index.html">HOME</a>
-          <a href="work.html">WORK</a>
-          <a href="about_me.html">ABOUT ME</a>
-          <a href="contact.html">CONTACT</a>
+          <div class="nav_margin pullUpDown">
+            <a href="index.html">HOME</a>
+            <a href="work.html">WORK</a>
+            <a href="about_me.html">ABOUT ME</a>
+            <a href="contact.html">CONTACT</a>
+          </div>
         </nav>
-      </div>
     </header>
 
     <main>
