--- a/index.html
+++ b/index.html
@@ -8,26 +8,39 @@
   <link rel="stylesheet" href="stylesheets/style.css">
   <script src="js/main.js"></script>
 </head>
-<body>
+<body class="home-page">
   <header>
-    <div>
       <nav>
-        <a href="index.html">HOME</a>
-        <a href="work.html">WORK</a>
-        <a href="about_me.html">ABOUT ME</a>
-        <a href="contact.html">CONTACT</a>
+        <div class="nav_margin pullUpDown">
+            <a href="index.html">HOME</a>
+            <a href="work.html">WORK</a>
+          <a href="about_me.html">ABOUT ME</a>
+          <a href="contact.html">CONTACT</a>
+        </div>
       </nav>
-    </div>
   </header>
 
 
     <main>
-      <span>SHERINE FOO</span>
-      <br>
-      <span>WEB DEVELOPER</span>
-      <br>
-      <span>with CX and UX Experience</span>
+      <div class="home-page">
+        <div class="hello">
+          <span class="home-text" id="home-He">He</span>
+          <br>
+          <span class="home-text" id="home-llo">llo</span>
+        </div>
+        <br>
 
+        <div class="home-name">
+          <span class="home-text" id="home-sherine">SHERINE FOO</span>
+          <br>
+          <span class="home-text" id="home-web-dev">WEB DEVELOPER</span>
+          <br>
+          <span class="home-text" id="home-cx-ux">with CX and UX Experience</span>
+          <br>
+          <span class="home-text" id="my-portfolio">MY PORTFOLIO</span>
+        </div>
+
+      </div>
     </main>
 
 
