--- a/about_me.html
+++ b/about_me.html
@@ -11,14 +11,14 @@
 </head>
 <body>
   <header>
-    <div>
       <nav>
-        <a href="index.html">HOME</a>
-        <a href="work.html">WORK</a>
-        <a href="about_me.html">ABOUT ME</a>
-        <a href="contact.html">CONTACT</a>
+        <div class="nav_margin pullUpDown">
+          <a href="index.html">HOME</a>
+          <a href="work.html">WORK</a>
+          <a href="about_me.html">ABOUT ME</a>
+          <a href="contact.html">CONTACT</a>
+        </div>
       </nav>
-    </div>
   </header>
 
     <main>
