--- a/work.html
+++ b/work.html
@@ -10,14 +10,14 @@
 </head>
 <body>
   <header>
-    <div>
       <nav>
-        <a href="index.html">HOME</a>
-        <a href="work.html">PROJECTS</a>
-        <a href="about_me.html">ABOUT ME</a>
-        <a href="contact.html">CONTACT</a>
+        <div class="nav_margin pullUpDown">
+          <a href="index.html">HOME</a>
+          <a href="work.html">WORK</a>
+          <a href="about_me.html">ABOUT ME</a>
+          <a href="contact.html">CONTACT</a>
+        </div>
       </nav>
-    </div>
   </header>
 
 
