complete homepage adding contact icons and links

--- a/about_me.html
+++ b/about_me.html
@@ -22,17 +22,18 @@
   </header>
 
     <main>
-      <div>
-        <h1>HELLO</h1>
+      <div class="container">
+        <h1>HI</h1>
         <h2>I'M WEB DEVELOPER WITH CX & UX EXPERIENCE</h2>
         <img id="profile_pic" src="images/me3 (1).jpg" alt="sherine">
       </div>
 
-      <div>
+      <div class="container">
         <div class="Intro">
           <h3>INTRO</h3>
           <p>
-            Background in <b>Engineering</b> and started my career with <b>Project Engineer</b> in R&D company than moved to <b>Supplier Quality Engineer</b> in manufacturing industry in Penang, <b>Malaysia</b>. I than decided to move to <b>China</b> for <b>Customer Service</b> in construction industry and to transferred to <b>Sydney</b> to <b>setup and manage the customer support center</b>. I have always been a <b>dreamer</b> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <b>Web Developer</b>. Having <b>Process Design</b> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <b>empathy</b> mind with the customer, knowing what customer want and gaining their trust makes progress more <b>effective and higher customer satisfaction</b>. Did I mention I gain energy from learning?
+            Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
+            setup and manage the customer support center</span>. I have always been a <span class="intro">dreamer</span> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <span class="intro">Web Developer</span>. Having <span class="intro">Process Design</span> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <span class="intro">empathy</span> mind with the customer, knowing what customer want and gaining their trust makes progress more <span class="intro">effective and higher customer satisfaction</span>. Did I mention I gain energy from learning?
           </p>
         </div>
 
@@ -41,14 +42,15 @@
             <div class="skill_1">
               <h4>Web Development</h4>
                 <ul>
-                  <li>HTML/CSS</li>
+                  <li>HTML/CSS/SCSS</li>
                   <li>Javascript</li>
                   <li>jQuery</li>
                   <li>Ruby and Rails</li>
-                  <li>React</li>
-                  <li>Gastby</li>
                   <li>Ruby</li>
+                  <li>React</li>
                   <li>Web Audio API</li>
+                  <li>SQL</li>
+                  <li>AJAX</li>
                   <li>P5.JS</li>
                 </ul>
             </div>
