--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sherine Foo Portfolio</title>
   <link rel="stylesheet" href="stylesheets/style.css">
-  <script src="js/main.js"></script>
+  <script src= "p5/p5.js"></script>
+  <script src= "p5/addons/p5.dom.js"></script>
+  <script src= "p5/addons/p5.sound.js"></script>
 </head>
 <body class="home-page">
   <header>
@@ -20,6 +22,7 @@
       </nav>
   </header>
 
+    <div id="canvas"></div>
 
     <main>
       <div class="home-page">
@@ -37,12 +40,29 @@
           <br>
           <span class="home-text" id="home-cx-ux">with CX and UX Experience</span>
           <br>
-          <span class="home-text" id="my-portfolio">MY PORTFOLIO</span>
+          <div class-bottom>
+            <a href="work.html" class="home-text" id="my-portfolio">MY PORTFOLIO</a>
+
+            <a href="https://twitter.com/sherine_may" target="_blank">
+                <img src="./images/twitter.png" alt="twitter" class="contact-icon">
+            </a>
+            <a href="https://github.com/DreamerMay" target="_blank">
+                <img src="./images/github.png" alt="github" class="contact-icon">
+            </a>
+            <a href="https://www.linkedin.com/in/sherinefoo/" target="_blank">
+                <img src="./images/linkedIn.png" alt="linkedIn" class="contact-icon">
+            </a>
+            <a href="mailto:sherinemay79@gmail.com?Subject=Hello%20Sherine" target="_top">
+                <img src="./images/email.png" alt="Email" class="contact-icon">
+            </a>
+          </div>
         </div>
 
       </div>
     </main>
 
+  <script src= "js/jquery.js"></script>
+  <script src= "js/main.js"></script>
 
 </body>
 </html>
