--- a/work.html
+++ b/work.html
@@ -28,29 +28,28 @@
         <div id="gallery">
           <div id="web-dev-projects">
 
-            <figure class="sound-detect-art">
-              <img src="" alt="sound-detect-art" class="thumb" id="sound-detect-art-thumb">
+            <figure class="audio-art">
+              <img src="" alt="audio-art" class="thumb" id="sound-detect-art-thumb">
               <p>Sound Art</p>
-              <a id="westfield-link" href="https://drive.google.com/file/d/1Nk4xZ6-yU_2C7VVBc7otL75F_EjrmQo6/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://www.sherinefoo.com/audio_art2/" target="_blank">
             </figure>
 
             <figure class="dating-app">
               <img src="" alt="dating-app" class="thumb" id="dating-app-thumb">
-              <p>Dating Web</p>
-              <a id="westfield-link" href="https://drive.google.com/file/d/1Nk4xZ6-yU_2C7VVBc7otL75F_EjrmQo6/view?usp=sharing" target="_blank">
-
+              <p>Dating Web (Group Project)</p>
+              <a id="project-link" href="https://todo-meetyou.herokuapp.com/" target="_blank">
             </figure>
 
             <figure class="fashion-site">
               <img src="" alt="fashion-site" class="thumb" id="fashion-site-thumb">
               <p>Fashion Site</p>
-              <a id="westfield-link" href="https://drive.google.com/file/d/1Nk4xZ6-yU_2C7VVBc7otL75F_EjrmQo6/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://hidden-springs-69116.herokuapp.com/" target="_blank">
             </figure>
 
             <figure class="tic-tac-toe">
               <img src="" alt="tic-tac-toe" class="thumb" id="tic-tac-toe-thumb">
               <p>Tic Tac Toe</p>
-              <a id="westfield-link" href="https://drive.google.com/file/d/1Nk4xZ6-yU_2C7VVBc7otL75F_EjrmQo6/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://www.sherinefoo.com/tic-tac-toe/tic-tac-toe/" target="_blank">
             </figure>
 
           </div>
@@ -60,25 +59,25 @@
             <figure class="westfield">
               <img src="" alt="Westfield Project" class="thumb" id="westfield-thumb">
               <p>Westfield<br>Parking<br>Solution</p>
-              <a id="westfield-link" href="https://drive.google.com/file/d/1RfO1XUo-qpWO7gyI_wVop8_-ziEL0J3D/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://drive.google.com/open?id=1G9r-bY6N8--ZxBT4DzBPYImYihy-ebqe" target="_blank">
             </figure>
 
             <figure class="KWTE">
               <img src="" alt="KWTE" class="thumb" id="KWTE-thumb">
               <p>Know What<br>To Eat</p>
-              <a id="KWTE-link" href="https://drive.google.com/file/d/1H-o9rr_ZWs9d5HZNzQ6Q7NsdXinBfcPd/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://drive.google.com/open?id=1urhxkcIsxIpRuFXrd-tSwfF0wXoYj0Ws" target="_blank">
             </figure>
 
             <figure class="property">
               <img src="" alt="Perfect Property" class="thumb" id="property-thumb">
               <p>Perfect Property</p>
-              <a id="property-link" href="https://drive.google.com/file/d/1RfO1XUo-qpWO7gyI_wVop8_-ziEL0J3D/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://drive.google.com/open?id=1vwl0_H5hQE21eXkey4ipIjzJEiH2LLUm" target="_blank">
             </figure>
 
             <figure class="wordzer">
               <img src="" alt="Wordzer" class="thumb" id="wordzer-thumb">
               <p>Wordzer</p>
-              <a id="wordzer-link" href="https://drive.google.com/file/d/1SQrMYtsw2c2lhFbNwbA00kYvYEyK3hWT/view?usp=sharing" target="_blank">
+              <a id="project-link" href="https://drive.google.com/open?id=1KkmO1Dvq0VU-wZBrZERKIg2CU_dvhiBI" target="_blank">
             </figure>
 
           </div>
