complete work page wtih popup

--- a/about_me.html
+++ b/about_me.html
@@ -38,23 +38,32 @@
 
         <div class="Skills">
           <h3>MY SKILLS</h3>
-            <div class="skill_1">
+            <div class="skill_web">
               <h4>Web Development</h4>
                 <ul>
-                  <li>HTML/CSS/SCSS</li>
                   <li>Javascript</li>
                   <li>jQuery</li>
                   <li>Ruby and Rails</li>
                   <li>Ruby</li>
-                  <li>React</li>
-                  <li>Web Audio API</li>
-                  <li>SQL</li>
+                  <li>PostgresQL</li>
                   <li>AJAX</li>
                   <li>P5.JS</li>
+                  <li>HTML/CSS/SCSS</li>
                 </ul>
             </div>
 
-            <div class="skill_2">
+            <div class="skill_soft">
+              <h4>Soft Skills</h4>
+                <ul>
+                  <li>Project Management</li>
+                  <li>Process Design</li>
+                  <li>Customer Requirement Identification</li>
+                  <li>Customer Management</li>
+                  <li>Team Management</li>
+                </ul>
+            </div>
+
+            <div class="skill_ux">
               <h4>UX</h4>
                 <ul>
                   <li>Competitor Research</li>
@@ -72,18 +81,17 @@
                 </ul>
             </div>
 
-            <div class="skill_3">
-              <h4>Others</h4>
+
+
+            <div class="skill_adventure">
+              <h4>My Adventures</h4>
                 <ul>
-                  <li>Project Management</li>
-                  <li>Process Design</li>
-                  <li>Customer Requirement Identification</li>
-                  <li>Customer Management</li>
-                  <li>Team Management</li>
+                  <li>Walked 1000km in 31 days with minimum surviving equipment</li>
+                  <li>Sky Diving 14,000ft (Best experience in life ever!)</li>
+                  <li>Bungee Jump in world highest bungee jump</li>
                 </ul>
             </div>
         </div>
-
 
       </div>
 
