--- a/work.html
+++ b/work.html
@@ -39,28 +39,54 @@
               <div class="img-nest">
 
                 <div class="project-img-div">
-                  <img src="./images/web-audio-art.png" alt="Audio Art" class="project-pic" href="#audio-art-pic">
+                  <img src="./images/web-audio-art.png" alt="Audio Art" class="project-pic" href="#audio-art-popup">
                   <div class="pop-a-div">
-                    <a class="pop-a" href="#audio-art-pic">open</a>
+                    <a class="pop-a" href="#audio-art-popup">open</a>
                   </div>
                 </div>
-                  <div id="audio-art-pic" class="yourModalClass" style="display:none;">
-                    <h1>Audio Art</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mauris risus, consectetur in ante sit amet, viverra viverra lacus. Nunc a fermentum neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt vehicula lacus id porttitor. Integer vel tristique erat, vel ultricies quam. </p>
-                    <a href="#audio-art-pic">Close Modal</a>
+                  <div id="audio-art-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Audio Art</h3>
+                    <p>Audio Art <span class="code" href="https://github.com/DreamerMay/audio_art2" target="_blank">(view code)</span> is an app that generate visual art show by abstracting data from audio input.</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">Ball dancing based on sound from microphone </li>
+                        <li class="popup-li">Capture data from audio input to creat visual</li>
+                        <li class="popup-li">Visual effect include box, particles dropping, Starfield and etc.</li>
+                      </ul>
                   </div>
-
-
-                <br>
                 <a href="https://www.sherinefoo.com/audio_art2/" target="_blank" id="project-link" class="project-name"><span id="a">Audio Art</span><span id="b">Live Demo</span></a>
               </div>
 
 
-
+          <!-- web-dating -->
               <div class="img-nest">
-                <img src="./images/web-dating-web.png" alt="Dating Web" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/web-dating-web.png" alt="Dating Web" class="project-pic" href="#dating-web-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#dating-web-popup">open</a>
+                  </div>
+                </div>
+                  <div id="dating-web-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">//TODO: Meet You &#10084;</h3>
+                    <p>A dating site <span class="code" href="https://github.com/DreamerMay/dating-web" target="_blank">(view code)</span> catered towards singles in the tech industry. Users can browse profiles, like and unlike users and message potential matches.</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">Code test before sign up &#x263A;</li>
+                        <li class="popup-li">Creating dating profile</li>
+                        <li class="popup-li">Like someone and find your match!</li>
+                        <li class="popup-li">Take an Interest Quizzes to get your scores</li>
+                        <li class="popup-li">Live chatting with your matches &#10084;&#10084;</li>
+                      </ul>
+                  </div>
+
                 <a href="https://todo-meetyou.herokuapp.com/" target="_blank" id="project-link" class="project-name"><span id="a">//TODO: Meet You &#10084;</span><span id="b">Live Demo</span></a>
+
               </div>
 
             </div>
@@ -69,26 +95,54 @@
             <div class="wrapper">
 
               <div class="img-nest">
-                <img src="./images/web-fashion-site.png" alt="Fashion Site" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/web-fashion-site.png" alt="Fashion Site" class="project-pic" href="#fashion-web-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#fashion-web-popup">open</a>
+                  </div>
+                </div>
+                  <div id="fashion-web-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Chloe</h3>
+                    <p>Chloe<span class="code" href="https://github.com/DreamerMay/Fashion_Site" target="_blank">(view code)</span> is a fashion site that let user able to choose by Fashion Style.</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">Create account and login </li>
+                        <li class="popup-li">If user upload avatar photo, site will welcome with user photo after login</li>
+                        <li class="popup-li">Clothings are categorized by Fashion Style and Clothing Type to ease user search</li>
+                      </ul>
+                  </div>
+
                 <a href="https://hidden-springs-69116.herokuapp.com/" target="_blank" id="project-link" class="project-name"><span id="a">Fashion Site</span><span id="b">Live Demo</span></a>
               </div>
 
               <div class="img-nest">
-                <img src="./images/web-tic-tac-toe.png" alt="Tic Tac Toe" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/web-tic-tac-toe.png" alt="Tic Tac Toe" class="project-pic" href="#TTT-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#TTT-popup">open</a>
+                  </div>
+                </div>
+                  <div id="TTT-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Tic Tac Toe</h3>
+                    <p>Tic Tac Toe<span class="code" href="https://github.com/DreamerMay/tic-tac-toe" target="_blank">(view code)</span> traditioinal game in digital world! It also cheers you up with sound. &#x2655;</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">Single player or play with AI player </li>
+                        <li class="popup-li">Pop up message to show winner or draw</li>
+                        <li class="popup-li">Sound effect when complete game. Different for winner and draw</li>
+                      </ul>
+                  </div>
+
                 <a href="https://www.sherinefoo.com/tic-tac-toe/tic-tac-toe/" target="_blank" id="project-link" class="project-name"><span id="a">Tic Tac Toe</span><span id="b">Live Demo</span></a>
               </div>
 
             </div>
-            <!-- testing iziModal -->
-            <!-- <button class="open-default button">default</button>
-            <div id="modal">
-              <div class="close">
-                <a data-izimodal-close="">×</a>
-              </div>
-              <p class="trigger">このモーダルはデフォルト設定です</p>
-            </div> -->
 
           </div>
 
@@ -99,14 +153,59 @@
             <div class="wrapper">
 
               <div class="img-nest">
-                <img src="./images/ux-kwte.png" alt="KWTE" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/ux-kwte.png" alt="KWTE" class="project-pic" href="#KWTE-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#KWTE-popup">open</a>
+                  </div>
+                </div>
+                  <div id="KWTE-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Know What To Eat</h3>
+                    <p>KWTE<span class="code" href="https://invis.io/7QNVORPCK59" target="_blank">(view prototype)</span> is a health app that let user learn what to eat right and be energized and feel healthy!</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">Create account and login </li>
+                        <li class="popup-li">Provides library of nutrients required for humans</li>
+                        <li class="popup-li">Provide top 5 food source for specific nutrients required</li>
+                        <li class="popup-li">Set health goal to ensure user consume correct food to meet goal</li>
+                        <li class="popup-li">Recipes suggestion based on nutrients required</li>
+                        <li class="popup-li">Suggestion of food to improve sickness</li>
+                        <li class="popup-li">Generate groceries list based on recipe chosen</li>
+                        <li class="popup-li">Track nutrients status</li>
+                      </ul>
+                  </div>
+
                 <a href="https://drive.google.com/open?id=1urhxkcIsxIpRuFXrd-tSwfF0wXoYj0Ws" target="_blank" id="project-link" class="project-name"><span id="a">Know What To Eat</span><span id="b">Full Profile</span></a>
               </div>
 
+
+
               <div class="img-nest">
-                <img src="./images/ux-perfect-property.png" alt="Perfect Property" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/ux-perfect-property.png" alt="Perfect Property" class="project-pic" href="#property-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#property-popup">open</a>
+                  </div>
+                </div>
+                  <div id="property-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Perfect Property</h3>
+                    <p>Perfect Property<span class="code" href="https://invis.io/P8NVOYWWC2N" target="_blank">(view prototype)</span> is a property search web for busy people. Easy to use and simplicity design with optimum information needed for a suitable property search. </p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">System provide calculation of affortability based on assets and liability user provide. </li>
+                        <li class="popup-li">Search and filter available properties</li>
+                        <li class="popup-li">Bookmark desire property</li>
+                        <li class="popup-li">Inspection planner</li>
+                        <li class="popup-li">Ability to chat and contact real estate professional of the property</li>
+                      </ul>
+                  </div>
+
                 <a href="https://drive.google.com/open?id=1vwl0_H5hQE21eXkey4ipIjzJEiH2LLUm" target="_blank" id="project-link" class="project-name"><span id="a">Perfect Property</span><span id="b">Full Profile</span></a>
               </div>
 
@@ -115,14 +214,50 @@
             <div class="wrapper">
 
               <div class="img-nest">
-                <img src="./images/ux-westfield.png" alt="Westfield" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/ux-westfield.png" alt="Westfield" class="project-pic" href="#westfield-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#westfield-popup">open</a>
+                  </div>
+                </div>
+                  <div id="westfield-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Strategy of an Engaging Car Park</h3>
+                    <p>This project is solutions provide for Westfield to deal with their real time problem of car park issues in Bondi Junction Complex</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">User reserach to find 3 top painpoint to solve by using User Journey Map  </li>
+                        <li class="popup-li">Interview with real shoppers to understand if the painpoint this project trying to solve is significant  </li>
+                        <li class="popup-li">Provide physical and easy to implement solutions for customer to consider</li>
+                      </ul>
+                  </div>
+
                 <a href="https://drive.google.com/open?id=1G9r-bY6N8--ZxBT4DzBPYImYihy-ebqe" target="_blank" id="project-link" class="project-name"><span id="a">Westfield</span><span id="b">Full Profile</span></a>
               </div>
 
               <div class="img-nest">
-                <img src="./images/ux-wordzer.png" alt="Wordzer" class="project-pic">
-                <br>
+                <div class="project-img-div">
+                  <img src="./images/ux-wordzer.png" alt="Wordzer" class="project-pic" href="#wordzer-popup">
+                  <div class="pop-a-div">
+                    <a class="pop-a" href="#wordzer-popup">open</a>
+                  </div>
+                </div>
+                  <div id="wordzer-popup" class="modal-popup-box" style="display:none;">
+                    <a href="" class="popup-close">
+                      <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
+                    </a>
+                    <h3 id="popup-h3">Wordzer</h3>
+                    <p>Wordzer is a vocabulary app to healp busy people to learn new vacabulary with visual and challenges.</p>
+                    <h3 id="popup-h3">Features</h3>
+                      <ul>
+                        <li class="popup-li">Visuals to help user remember the new vocabulary learn</li>
+                        <li class="popup-li">Provide games and challenge to make it more fun</li>
+                        <li class="popup-li">Goal settings to push user to achieve their goals</li>
+                      </ul>
+                  </div>
+
                 <a href="https://drive.google.com/open?id=1KkmO1Dvq0VU-wZBrZERKIg2CU_dvhiBI" target="_blank" id="project-link" class="project-name"><span id="a">Wordzer</span><span id="b">Full Profile</span></a>
               </div>
 
@@ -133,6 +268,15 @@
 
         </div> <!-- gallery -->
       </div>  <!-- Projects conatiner -->
+
+      <!-- testing iziModal -->
+      <!-- <button class="open-default button">default</button>
+      <div id="modal">
+        <div class="close">
+          <a data-izimodal-close="">×</a>
+        </div>
+        <p class="trigger">このモーダルはデフォルト設定です</p>
+      </div> -->
 
 
     </main>
